Updated examples based on errors found